[gd_scene load_steps=5 format=3 uid="uid://bjlqoiyuye87x"]

[ext_resource type="Script" uid="uid://qowytqp6i4gn" path="res://Scripts/opciones.gd" id="1_30ptr"]
[ext_resource type="Texture2D" uid="uid://ctcku14w7gcqw" path="res://Imagenes/Fondo 1.jpg" id="2_js1sj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_57mlq"]
bg_color = Color(0, 0, 0, 0.57254905)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pw27j"]
bg_color = Color(0, 0, 0, 0.4862745)
corner_detail = 1

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_30ptr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23392546, 0.23392546, 0.2339254, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_js1sj")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -136.5
offset_right = 123.0
offset_bottom = 136.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 21

[node name="Volumen" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_57mlq")
text = "Volumen"

[node name="Brillo" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_pw27j")
text = "Brillo"

[node name="Volver" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Volver"

[connection signal="pressed" from="VBoxContainer/Volumen" to="." method="_on_volumen_pressed"]
[connection signal="pressed" from="VBoxContainer/Volumen" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Brillo" to="." method="_on_brillo_pressed"]
[connection signal="pressed" from="VBoxContainer/Brillo" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="VBoxContainer/Volver" to="." method="_on_exit_pressed"]
